# evolving-world-models

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: drawing.md
docs/logs/: 2026-07-20.md  2026-07-21-code-quality-pipeline.md  2026-07-21-public-repository-bootstrap.md  2026-07-23-transition-learning-foundations.md
docs/reference/: beliefs.md  planning.md  two-clock-allocation.md  visualization.md
notebooks/: Factored_MDP_Demo.ipynb  Two_Clock_Allocation_Experiment.ipynb
scripts/: __init__.py  beliefs.py  clock_experiment.py  experiment_plotting.py  mdp.py  planning.py  visualization.py
tests/: test_beliefs.py  test_clock_experiment.py  test_experiment_plotting.py  test_mdp.py  test_planning.py  test_visualization.py
